bk_ida/gccida/g1/dwarf2out_end_epilogue
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_end_epilogue/src/dwarf2out.c:2594:43: error: use of undeclared identifier 'a'
sprintf( label, "*.%s%u", ( const char *)&a.dw_attr_next + 4, current_funcdef_number); 
                                          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_end_epilogue/src/obj/dwarf2out.o] Error 1
